v1.1.0 (#13)
* fix build with java module packaging

* rm custom mvnw

* update java and dss

* change default tsp

* rm unused import

* autogram core v0.9.1

* v1.1.0